hyperonio/hyperonio-studio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hyperon-studio
  labels:
    app.kubernetes.io/name: hyperon-studio
    app.kubernetes.io/instance: hyperon-studio
