hyperonio/hyperonio-studio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyperon-studio-svc
  namespace: hyperon-studio
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      targetPort: 38080
  selector:
    app: hyperon-studio
